--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
       flex: 0;
       width: auto;
     }
+
+    .back-link {
+      text-align: center;
+      margin-top: 12px;
+      font-style: italic;
+      text-decoration: underline;
+      color: #2b7cff;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -127,6 +136,7 @@
   let step = 1;
   let keepHistory = true;
   let firstAgentShown = false;
+  let historyStack = [];
 
   function setStep(num) {
     stepHeader.textContent = `Análise de Crédito – Etapa ${num}`;
@@ -167,6 +177,106 @@
     messageEl.innerHTML += `${text}<br>`;
   }
 
+  function formatCurrencyInput(input) {
+    let value = input.value.replace(/\D/g, "");
+    if (!value) {
+      input.value = "";
+      return;
+    }
+    const number = parseInt(value, 10);
+    input.value = "R$ " + number.toLocaleString("pt-BR");
+  }
+
+  function parseCurrency(value) {
+    return parseInt(value.replace(/[^\d]/g, ""), 10) || 0;
+  }
+
+  function maskDate(input) {
+    let value = input.value.replace(/\D/g, "");
+    if (value.length > 8) value = value.slice(0, 8);
+    if (value.length > 4) {
+      input.value = value.replace(/(\d{2})(\d{2})(\d{0,4})/, "$1/$2/$3");
+    } else if (value.length > 2) {
+      input.value = value.replace(/(\d{2})(\d{0,2})/, "$1/$2");
+    } else {
+      input.value = value;
+    }
+  }
+
+  function maskCPF(input) {
+    let value = input.value.replace(/\D/g, "");
+    if (value.length > 11) value = value.slice(0, 11);
+    if (value.length > 9) {
+      input.value = value.replace(/(\d{3})(\d{3})(\d{3})(\d{0,2})/, "$1.$2.$3-$4");
+    } else if (value.length > 6) {
+      input.value = value.replace(/(\d{3})(\d{3})(\d{0,3})/, "$1.$2.$3");
+    } else if (value.length > 3) {
+      input.value = value.replace(/(\d{3})(\d{0,3})/, "$1.$2");
+    } else {
+      input.value = value;
+    }
+  }
+
+  function isValidCPF(cpf) {
+    cpf = cpf.replace(/[^\d]/g, "");
+    if (cpf.length !== 11) return false;
+    if (/^(\d)\1+$/.test(cpf)) return false;
+
+    let sum = 0;
+    for (let i = 0; i < 9; i++) sum += parseInt(cpf.charAt(i)) * (10 - i);
+    let firstCheck = (sum * 10) % 11;
+    if (firstCheck === 10 || firstCheck === 11) firstCheck = 0;
+    if (firstCheck !== parseInt(cpf.charAt(9))) return false;
+
+    sum = 0;
+    for (let i = 0; i < 10; i++) sum += parseInt(cpf.charAt(i)) * (11 - i);
+    let secondCheck = (sum * 10) % 11;
+    if (secondCheck === 10 || secondCheck === 11) secondCheck = 0;
+    if (secondCheck !== parseInt(cpf.charAt(10))) return false;
+
+    return true;
+  }
+
+  function isValidBirthDate(dateStr) {
+    const parts = dateStr.split("/");
+    if (parts.length !== 3) return false;
+    const day = parseInt(parts[0], 10);
+    const month = parseInt(parts[1], 10) - 1;
+    const year = parseInt(parts[2], 10);
+
+    const birthDate = new Date(year, month, day);
+    const today = new Date();
+
+    if (birthDate > today) return false;
+
+    let age = today.getFullYear() - birthDate.getFullYear();
+    const m = today.getMonth() - birthDate.getMonth();
+    if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+      age--;
+    }
+
+    if (age < 18 || age > 120) return false;
+    return true;
+  }
+
+  function addBackLink() {
+    if (step === 1) return;
+    inputContainer.innerHTML += `<div class="back-link" onclick="goBack()">voltar</div>`;
+  }
+
+  function goBack() {
+    if (historyStack.length > 0) {
+      const previous = historyStack.pop();
+      step = previous.step;
+      data[previous.field] = previous.value;
+      previous.render();
+    }
+  }
+
+  function saveHistory(field, value, renderFn) {
+    historyStack.push({ step, field, value, render: renderFn });
+  }
+
   // Abertura
   function startConversation() {
     setStep(1);
@@ -183,10 +293,15 @@
 
     setTimeout(() => {
       showTyping(() => {
-        appendMessage("Para iniciarmos esta etapa, por favor me informe:<br><strong>Qual é o seu nome completo?</strong>");
+        appendMessage("Para iniciarmos esta etapa, por favor me informe:<br><strong>Qual é o seu nome completo e sua data de nascimento?</strong>");
         inputContainer.innerHTML = `
           <div class="input-area">
-            <input type="text" id="nome" placeholder="Digite seu nome completo" />
+            <input type="text" id="nome" placeholder="Digite seu nome completo" value="${data.nome || ""}" />
+          </div>
+          <div class="input-area">
+            <input type="text" id="nascimento" placeholder="Data de nascimento (DD/MM/AAAA)" maxlength="10" oninput="maskDate(this)" value="${data.nascimento || ""}" />
+          </div>
+          <div class="input-area">
             <button onclick="saveName()">Enviar</button>
           </div>
         `;
@@ -196,8 +311,13 @@
 
   function saveName() {
     const nome = document.getElementById("nome").value.trim();
-    if (!nome) return;
+    const nascimento = document.getElementById("nascimento").value.trim();
+    if (!nome || nascimento.length !== 10 || !isValidBirthDate(nascimento)) return;
+
+    saveHistory("nome", data.nome, startConversation);
+
     data.nome = nome;
+    data.nascimento = nascimento;
     keepHistory = false;
     firstAgentShown = false;
     askVehicleType();
@@ -211,25 +331,42 @@
       inputContainer.innerHTML = `
         <div class="options">
           <div class="option-row">
-            <input type="radio" name="tipoVeiculo" value="Usado ou SemiNovo" onclick="setVehicleType(this.value)">
-            <label>Usado ou SemiNovo</label>
+            <input type="radio" name="tipoVeiculo" value="Usado ou Seminovo" ${data.veiculoTipo === "Usado ou Seminovo" ? "checked" : ""} onclick="setVehicleType(this.value)">
+            <label>Usado ou Seminovo</label>
           </div>
           <div class="option-row">
-            <input type="radio" name="tipoVeiculo" value="Zero KM" onclick="setVehicleType(this.value)">
+            <input type="radio" name="tipoVeiculo" value="Zero KM" ${data.veiculoTipo === "Zero KM" ? "checked" : ""} onclick="setVehicleType(this.value)">
             <label>Zero KM</label>
           </div>
         </div>
       `;
+      addBackLink();
     });
   }
 
   function setVehicleType(type) {
+    saveHistory("veiculoTipo", data.veiculoTipo, askVehicleType);
     data.veiculoTipo = type;
-    if (type === "Usado ou SemiNovo") {
-      askPlate();
+    if (type === "Usado ou Seminovo") {
+      askPlateQuestion();
     } else {
       askBrandModel();
     }
+  }
+
+  function askPlateQuestion() {
+    setStep(3);
+    showTyping(() => {
+      messageEl.innerHTML = "";
+      appendMessage("Você possui a placa do veículo?");
+      inputContainer.innerHTML = `
+        <div class="options">
+          <button onclick="askPlate()">Sim</button>
+          <button class="secondary" onclick="askModelYear()">Não</button>
+        </div>
+      `;
+      addBackLink();
+    });
   }
 
   function askPlate() {
@@ -239,18 +376,49 @@
       appendMessage("Por favor, informe a placa do veículo:");
       inputContainer.innerHTML = `
         <div class="input-area">
-          <input type="text" id="placa" placeholder="Ex: ABC1D23" />
+          <input type="text" id="placa" placeholder="Ex: ABC1D23" value="${data.placa || ""}" oninput="this.value=this.value.toUpperCase().replace(/\\s/g,'')" />
           <button onclick="savePlate()">Enviar</button>
         </div>
       `;
+      addBackLink();
     });
   }
 
   function savePlate() {
-    const placa = document.getElementById("placa").value.trim();
+    const placa = document.getElementById("placa").value.trim().toUpperCase().replace(/\s/g, "");
     if (!placa) return;
+    saveHistory("placa", data.placa, askPlate);
     data.placa = placa;
-    askConsent();
+    askVehicleValue();
+  }
+
+  function askModelYear() {
+    setStep(3);
+    showTyping(() => {
+      messageEl.innerHTML = "";
+      appendMessage("Sem problemas! Informe o modelo e o ano do veículo:");
+      inputContainer.innerHTML = `
+        <div class="input-area">
+          <input type="text" id="modeloUsado" placeholder="Modelo do veículo" value="${data.modelo || ""}" />
+        </div>
+        <div class="input-area">
+          <input type="number" id="anoUsado" placeholder="Ano do veículo" value="${data.ano || ""}" />
+          <button onclick="saveModelYear()">Enviar</button>
+        </div>
+      `;
+      addBackLink();
+    });
+  }
+
+  function saveModelYear() {
+    const modelo = document.getElementById("modeloUsado").value.trim();
+    const ano = document.getElementById("anoUsado").value.trim();
+    if (!modelo || !ano) return;
+    saveHistory("modelo", data.modelo, askModelYear);
+    saveHistory("ano", data.ano, askModelYear);
+    data.modelo = modelo;
+    data.ano = ano;
+    askVehicleValue();
   }
 
   function askBrandModel() {
@@ -260,13 +428,14 @@
       appendMessage("Informe a marca e o modelo do veículo:");
       inputContainer.innerHTML = `
         <div class="input-area">
-          <input type="text" id="marca" placeholder="Marca" />
+          <input type="text" id="marca" placeholder="Marca" value="${data.marca || ""}" />
         </div>
         <div class="input-area">
-          <input type="text" id="modelo" placeholder="Modelo" />
+          <input type="text" id="modelo" placeholder="Modelo" value="${data.modelo || ""}" />
           <button onclick="saveBrandModel()">Enviar</button>
         </div>
       `;
+      addBackLink();
     });
   }
 
@@ -274,56 +443,83 @@
     const marca = document.getElementById("marca").value.trim();
     const modelo = document.getElementById("modelo").value.trim();
     if (!marca || !modelo) return;
+    saveHistory("marca", data.marca, askBrandModel);
+    saveHistory("modelo", data.modelo, askBrandModel);
     data.marca = marca;
     data.modelo = modelo;
-    askConsent();
+    askVehicleValue();
   }
 
-  function askConsent() {
+  function askVehicleValue() {
     setStep(4);
-    showTyping(() => {
-      messageEl.innerHTML = "";
-      appendMessage("Antes de continuar, alguns dados sensíveis serão solicitados para a análise de crédito. Você está de acordo em prosseguir?");
-      inputContainer.innerHTML = `
-        <div class="options">
-          <button onclick="setConsent(true)">Sim, estou de acordo</button>
-          <button class="secondary" onclick="setConsent(false)">Não, prefiro não continuar</button>
-        </div>
-      `;
-    });
-  }
-
-  function setConsent(agree) {
-    if (!agree) {
-      showTyping(() => {
-        messageEl.innerHTML = "";
-        appendMessage("Sem problemas! Quando quiser, estarei à disposição.");
-        clearInput();
-      });
-      return;
-    }
-    askFinancials();
-  }
-
-  function askFinancials() {
-    setStep(5);
     showTyping(() => {
       messageEl.innerHTML = "";
       appendMessage("Qual o valor aproximado do veículo?");
       inputContainer.innerHTML = `
         <div class="input-area">
-          <input type="number" id="valorVeiculo" placeholder="Ex: 50000" />
+          <input type="text" id="valorVeiculo" placeholder="Ex: R$ 50.000" oninput="formatCurrencyInput(this)" value="${data.valorVeiculo ? "R$ " + data.valorVeiculo.toLocaleString("pt-BR") : ""}" />
           <button onclick="saveVehicleValue()">Enviar</button>
         </div>
       `;
+      addBackLink();
     });
   }
 
   function saveVehicleValue() {
-    const valor = parseFloat(document.getElementById("valorVeiculo").value);
+    const valor = parseCurrency(document.getElementById("valorVeiculo").value);
     if (!valor || valor <= 0) return;
+    saveHistory("valorVeiculo", data.valorVeiculo, askVehicleValue);
     data.valorVeiculo = valor;
-    askIncome();
+    askEntry();
+  }
+
+  function askEntry() {
+    setStep(5);
+    showTyping(() => {
+      messageEl.innerHTML = "";
+      appendMessage("Agora, informe o valor de entrada que pretende dar no veículo.<br><br>Importante: essa entrada é paga diretamente ao vendedor ou concessionária, nunca para as instituições financeiras.");
+      inputContainer.innerHTML = `
+        <div class="input-area">
+          <input type="text" id="entrada" placeholder="Ex: R$ 10.000" oninput="formatCurrencyInput(this)" value="${data.entrada ? "R$ " + data.entrada.toLocaleString("pt-BR") : ""}" />
+          <button onclick="validateEntry()">Enviar</button>
+        </div>
+      `;
+      addBackLink();
+    });
+  }
+
+  function validateEntry() {
+    const entrada = parseCurrency(document.getElementById("entrada").value);
+    if (entrada < 0) return;
+    if (entrada > data.valorVeiculo) return;
+
+    saveHistory("entrada", data.entrada, askEntry);
+    data.entrada = entrada;
+
+    const valorVeiculo = data.valorVeiculo;
+    const entradaMinima20 = valorVeiculo * 0.2;
+
+    if (entrada < entradaMinima20) {
+      const entradaFormatada = entrada.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
+      const minimaFormatada = entradaMinima20.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
+
+      setStep(5);
+      showTyping(() => {
+        messageEl.innerHTML = "";
+        appendMessage(
+          `Sua entrada está um pouco abaixo do recomendado.<br><br>Para facilitar a aprovação, o ideal seria cerca de ${minimaFormatada}.<br><br>Deseja ajustar sua entrada ou continuar a análise com ${entradaFormatada}?`
+        );
+        inputContainer.innerHTML = `
+          <div class="options">
+            <button onclick="askEntry()">Ajustar valor da entrada</button>
+            <button onclick="askIncome()">Continuar análise com ${entradaFormatada}</button>
+          </div>
+        `;
+        addBackLink();
+      });
+    } else {
+      askIncome();
+    }
   }
 
   function askIncome() {
@@ -333,64 +529,43 @@
       appendMessage("Qual é sua renda mensal aproximada?");
       inputContainer.innerHTML = `
         <div class="input-area">
-          <input type="number" id="renda" placeholder="Ex: 3500" />
+          <input type="text" id="renda" placeholder="Ex: R$ 3.500" oninput="formatCurrencyInput(this)" value="${data.renda ? "R$ " + data.renda.toLocaleString("pt-BR") : ""}" />
           <button onclick="saveIncome()">Enviar</button>
         </div>
       `;
+      addBackLink();
     });
   }
 
   function saveIncome() {
-    const renda = parseFloat(document.getElementById("renda").value);
+    const renda = parseCurrency(document.getElementById("renda").value);
     if (!renda || renda <= 0) return;
+    saveHistory("renda", data.renda, askIncome);
     data.renda = renda;
-    askEntry();
+    askCPF();
   }
 
-  function askEntry() {
+  function askCPF() {
     setStep(7);
     showTyping(() => {
       messageEl.innerHTML = "";
-      appendMessage("Agora, informe o valor de entrada que pretende dar no veículo.<br><br>Importante: essa entrada é paga diretamente ao vendedor ou concessionária, nunca para nós.");
+      appendMessage("Para darmos continuidade à análise, informe seu CPF.<br><br>Ele será utilizado exclusivamente para consulta de score e análise de histórico financeiro.");
       inputContainer.innerHTML = `
         <div class="input-area">
-          <input type="number" id="entrada" placeholder="Ex: 10000" />
-          <button onclick="validateEntry()">Enviar</button>
+          <input type="text" id="cpf" placeholder="CPF" maxlength="14" oninput="maskCPF(this)" value="${data.cpf || ""}" />
+          <button onclick="saveCPF()">Enviar</button>
         </div>
       `;
+      addBackLink();
     });
   }
 
-  function validateEntry() {
-    const entrada = parseFloat(document.getElementById("entrada").value);
-    if (!entrada || entrada < 0) return;
-
-    data.entrada = entrada;
-
-    const valorVeiculo = data.valorVeiculo;
-    const entradaMinima20 = valorVeiculo * 0.2;
-    const entradaMinima167 = valorVeiculo * 0.167;
-
-    if (entrada < entradaMinima20) {
-      const entradaFormatada = entrada.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
-      const minimaFormatada = entradaMinima20.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
-
-      setStep(7);
-      showTyping(() => {
-        messageEl.innerHTML = "";
-        appendMessage(
-          `Sua entrada está um pouco abaixo do recomendado.<br><br>Para facilitar a aprovação, o ideal seria cerca de ${minimaFormatada}.<br><br>Deseja ajustar sua entrada ou continuar a análise com ${entradaFormatada}?`
-        );
-        inputContainer.innerHTML = `
-          <div class="options">
-            <button onclick="askEntry()">Ajustar valor da entrada</button>
-            <button onclick="finalize()">Continuar análise com ${entradaFormatada}</button>
-          </div>
-        `;
-      });
-    } else {
-      finalize();
-    }
+  function saveCPF() {
+    const cpf = document.getElementById("cpf").value.trim();
+    if (cpf.length !== 14 || !isValidCPF(cpf)) return;
+    saveHistory("cpf", data.cpf, askCPF);
+    data.cpf = cpf;
+    finalize();
   }
 
   function calculatePMT(PV, i, n) {
@@ -402,10 +577,11 @@
     setStep(8);
     showTyping(() => {
       messageEl.innerHTML = "";
-      appendMessage("Perfeito! Revise suas informações e, quando estiver pronto, envie para análise.");
+      appendMessage("Perfeito! Esta etapa foi concluída e seu crédito está cada vez mais próximo.<br>Os dados preenchidos serão encaminhados pelo WhatsApp, onde um operador continuará seu atendimento.");
       inputContainer.innerHTML = `
         <button onclick="sendToWhatsApp()">Finalizar e Enviar Formulário via WhatsApp</button>
       `;
+      addBackLink();
     });
   }
 
@@ -414,16 +590,23 @@
     const parcela = calculatePMT(PV, 5.2, 48);
     const limiteParcela = data.renda * 0.33;
 
-    let cod = "0000";
-    if (parcela > limiteParcela) cod = "0001";
-    if (data.entrada < data.valorVeiculo * 0.167) cod = "0002";
+    let codFinal = "2026020000";
+    if (parcela > limiteParcela) codFinal = "2026020001";
+    if (data.entrada < data.valorVeiculo * 0.167) codFinal = "2026020002";
 
     let texto = `Nova Solicitação de Crédito\n\n`;
     texto += `Nome: ${data.nome}\n`;
+    texto += `Data de nascimento: ${data.nascimento}\n`;
+    texto += `CPF: ${data.cpf}\n`;
     texto += `Tipo de veículo: ${data.veiculoTipo}\n`;
 
-    if (data.veiculoTipo === "Usado ou SemiNovo") {
-      texto += `Placa: ${data.placa}\n`;
+    if (data.veiculoTipo === "Usado ou Seminovo") {
+      if (data.placa) {
+        texto += `Placa: ${data.placa}\n`;
+      } else {
+        texto += `Modelo: ${data.modelo}\n`;
+        texto += `Ano: ${data.ano}\n`;
+      }
     } else {
       texto += `Marca: ${data.marca}\n`;
       texto += `Modelo: ${data.modelo}\n`;
@@ -432,7 +615,7 @@
     texto += `Valor do veículo: R$ ${data.valorVeiculo.toLocaleString("pt-BR")}\n`;
     texto += `Renda mensal: R$ ${data.renda.toLocaleString("pt-BR")}\n`;
     texto += `Entrada: R$ ${data.entrada.toLocaleString("pt-BR")}\n\n`;
-    texto += `COD: ${cod}`;
+    texto += `COD: ${codFinal}`;
 
     const url = `https://wa.me/5511959145787?text=${encodeURIComponent(texto)}`;
     window.open(url, "_blank");
